criando pagina de contador de moeda

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
         dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
     <string name="button">Button</string>
+    <string name="Quantoe">Quanto è?</string>
 </resources>
